--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "@types/node": "^16.11.24",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "autoprefixer": "^10.4.2",
+    "craco": "^0.0.3",
+    "postcss": "^8.4.6",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^7.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "tailwindcss": "^3.0.22",
+    "tailwindcss-cli": "^0.1.2",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
