--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postcss-preset-env": "^7.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "tailwindcss": "^3.0.22",
     "tailwindcss-cli": "^0.1.2",
