--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.11",
     "autoprefixer": "^10.4.2",
     "craco": "^0.0.3",
+    "flowbite": "^1.3.4",
     "postcss": "^8.4.6",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^7.3.3",
