--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.11",
     "apexcharts": "^3.33.1",
     "autoprefixer": "^10.4.2",
+    "browser-image-compression": "^1.0.17",
     "craco": "^0.0.3",
     "flowbite": "^1.3.4",
     "postcss": "^8.4.6",
