--- a/client/package.json
+++ b/client/package.json
@@ -12,15 +12,18 @@
     "@types/react-dom": "^17.0.11",
     "apexcharts": "^3.33.1",
     "autoprefixer": "^10.4.2",
+    "axios": "^0.26.0",
     "browser-image-compression": "^1.0.17",
     "craco": "^0.0.3",
     "flowbite": "^1.3.4",
+    "jwt-decode": "^3.1.2",
     "postcss": "^8.4.6",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^7.3.3",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "tailwindcss": "^3.0.22",
@@ -51,5 +54,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/tailwindcss": "^3.0.9"
   }
 }
