--- a/server/package.json
+++ b/server/package.json
@@ -13,12 +13,15 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "express-jwt": "^6.1.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
-    "mongodb": "^4.4.1"
+    "mongodb": "^4.4.1",
+    "nodemon": "^2.0.15",
+    "redis": "^4.0.4"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
