--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,9 @@
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
+    "react-dropdown": "^1.9.2",
     "react-loading": "^2.0.3",
+    "react-notifications": "^1.7.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
