--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "^10.4.2",
     "axios": "^0.26.0",
     "browser-image-compression": "^1.0.17",
+    "cogo-toast": "^4.2.3",
     "craco": "^0.0.3",
     "flowbite": "^1.3.4",
     "jwt-decode": "^3.1.2",
