--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon",
-    "start": "ts-node ./src/index.ts"
+    "start": "ts-node ./src/index.ts",
+    "pretty": "prettier --write ."
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +23,8 @@
     "moment": "^2.29.1",
     "mongodb": "^4.4.1",
     "nodemon": "^2.0.15",
+    "prettier": "^2.6.0",
+    "pretty": "^2.0.0",
     "redis": "^4.0.4"
   },
   "devDependencies": {
