--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "react-notifications": "^1.7.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-slideshow-image": "^3.7.3",
     "styled-components": "^5.3.3",
     "tailwindcss": "^3.0.22",
     "tailwindcss-cli": "^0.1.2",
