--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -15,7 +15,11 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "typeRoots": [
+      "./types",
+      "./node_modules/@types"
+    ],  
   },
   "include": ["src"]
 }
